force-app/main/default/objects/Cost_Estimate_With_MTO_BOQ__c.object
<CustomObject>
    <fields>
        <fullName>BOQ_File__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ไฟล์ข้อมูล BOQ ของ Subcontract</inlineHelpText>
        <label>BOQ File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Estimate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost Estimate</label>
        <referenceTo>Cost_Estimate__c</referenceTo>
        <relationshipLabel>Cost Estimate With MTO BOQ</relationshipLabel>
        <relationshipName>Cost_Estimate_With_MTO_BOQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MTO_File__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ไฟล์ข้อมูล MTO ของ Subcontract</inlineHelpText>
        <label>MTO File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MTO_and_BOQ_File_URL__c</fullName>
        <formula>IF(MTO_and_BOQ_File__c == null, &quot;No File&quot; ,HYPERLINK(MTO_and_BOQ_File__c, &quot;Open File&quot;,&quot;_self&quot;))</formula>
        <label>MTO and BOQ File URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTO_and_BOQ_File__c</fullName>
        <label>MTO and BOQ File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cost Estimate With MTO BOQ</label>
    <nameField>
        <label>Subcontract Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>